--- a/Projeto Cronômetro/index.html
+++ b/Projeto Cronômetro/index.html
@@ -19,9 +19,9 @@
       <h1>Stopwatch</h1>
       <h2>Vanilla Javascript Stopwatch</h2>
       <p><span id="seconds">00</span>:<span id="tens">00</span></p>
-      <button>Start</button>
-      <button>Stop</button>
-      <button>Reset</button>
+      <button id="button-start">Start</button>
+      <button id="button-stop">Stop</button>
+      <button id="button-reset">Reset</button>
     </div>
   </body>
 </html>
